--- a/package.json
+++ b/package.json
@@ -11,8 +11,14 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@primevue/themes": "^4.2.5",
+    "autoprefixer": "^10.4.20",
     "axios": "^1.7.8",
     "pinia": "^2.2.6",
+    "primeflex": "^3.3.1",
+    "primeicons": "^7.0.0",
+    "primevue": "^4.2.5",
+    "tailwindcss": "^3.4.16",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
@@ -20,6 +26,7 @@
     "@eslint/js": "^9.14.0",
     "@vitejs/plugin-vue": "^5.1.4",
     "@vue/eslint-config-prettier": "^10.1.0",
+    "@vue/language-server": "^2.1.10",
     "eslint": "^9.14.0",
     "eslint-plugin-vue": "^9.30.0",
     "prettier": "^3.3.3",
