Updated API URL

--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
 VUE_APP_APPNAME = JS-project
 VUE_APP_CLIENT_ID = TestClient
 VUE_APP_CLIENT_SECRET = test_secret
-VUE_APP_BACKEND_URL = 'http://localhost'
-VITE_BACKEND_URL = 'http://localhost:8000/api'
-
+VUE_APP_BACKEND_URL = 'http://109.71.242.205'
+VITE_BACKEND_URL = 'https://api.kinomov.ru:8000/api'
