--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 VUE_APP_APPNAME = JS-project
 VUE_APP_CLIENT_ID = TestClient
 VUE_APP_CLIENT_SECRET = test_secret
-VUE_APP_BACKEND_URL=http://kinomov.ru:8080
-VITE_BACKEND_URL=http://kinomov.ru:8080/api
+VUE_APP_BACKEND_URL=http://kinomov.ru
+VITE_BACKEND_URL=http://kinomov.ru/api
